// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemedComponent matches withError snapshot: with error mount 1`] = `
.emotion-4 {
  padding: 0;
  margin: 0;
  border: 0;
  box-sizing: border-box;
  width: 100%;
}

.emotion-4:after {
  content: '';
  display: table;
  clear: both;
}

@media only screen and (min-width:641px) {
  .emotion-4 {
    max-width: 960px;
  }
}

.glamor-1,
[data-glamor-1] {
  margin-bottom: 0;
}

.glamor-0,
[data-glamor-0] {
  font-family: "nta", Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
  margin-bottom: 0;
}

@media only screen and (min-width: 641px) {
  .glamor-1,
  [data-glamor-1] {
    margin-bottom: 0;
  }
}

@media only screen and (min-width: 641px) {
  .glamor-0,
  [data-glamor-0] {
    font-size: 19px;
    line-height: 1.3;
    margin-bottom: 0;
  }
}

<glamorous(MultiChoice)
  error="example"
  label="example"
>
  <MultiChoice
    className="glamor-1"
    error="example"
    label="example"
    meta={Object {}}
  >
    <Styled(div)
      className="glamor-1"
    >
      <div
        className="glamor-1 glamor-4"
      >
        <glamorous(LabelText)>
          <LabelText
            className="glamor-1"
          >
            <glamorous(span)
              className="glamor-1"
            >
              <span
                className="glamor-0"
              >
                example
              </span>
            </glamorous(span)>
          </LabelText>
        </glamorous(LabelText)>
        example
      </div>
    </Styled(div)>
  </MultiChoice>
</glamorous(MultiChoice)>
`;

exports[`ThemedComponent matches wrapper snapshot: wrapper mount 1`] = `
.emotion-10 {
  padding: 0;
  margin: 0;
  border: 0;
  box-sizing: border-box;
  width: 100%;
  border-left: 4px solid #b10e1e;
  margin-right: 15px;
  padding-left: 10px;
}

.emotion-10:after {
  content: '';
  display: table;
  clear: both;
}

@media only screen and (min-width:641px) {
  .emotion-10 {
    max-width: 960px;
  }
}

.glamor-1,
[data-glamor-1] {
  margin-bottom: 0;
}

.glamor-0,
[data-glamor-0] {
  font-family: "nta", Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
  margin-bottom: 0;
}

.glamor-3,
[data-glamor-3] {
  display: block;
  font-family: "nta", Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  color: #6f777b;
  margin-bottom: 0;
}

.glamor-6,
[data-glamor-6] {
  display: block;
  font-family: "nta", Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  color: #b10e1e;
  padding-top: 4px;
  padding-bottom: 2px;
  margin-bottom: 0;
}

@media only screen and (min-width: 641px) {
  .glamor-1,
  [data-glamor-1] {
    margin-bottom: 0;
  }
}

@media only screen and (min-width: 641px) {
  .glamor-0,
  [data-glamor-0] {
    font-size: 19px;
    line-height: 1.3;
    margin-bottom: 0;
  }
}

@media only screen and (min-width: 641px) {
  .glamor-3,
  [data-glamor-3] {
    font-size: 19px;
    line-height: 1.3;
    margin-bottom: 0;
  }
}

@media only screen and (min-width: 641px) {
  .glamor-6,
  [data-glamor-6] {
    font-size: 19px;
    line-height: 1.3;
    margin-bottom: 0;
  }
}

<glamorous(MultiChoice)
  hint="example"
  label="example"
  meta={
    Object {
      "error": "example",
      "touched": true,
    }
  }
>
  <MultiChoice
    className="glamor-1"
    hint="example"
    label="example"
    meta={
      Object {
        "error": "example",
        "touched": true,
      }
    }
  >
    <Styled(div)
      className="glamor-1"
      error="example"
    >
      <div
        className="glamor-1 glamor-10"
      >
        <glamorous(LabelText)>
          <LabelText
            className="glamor-1"
          >
            <glamorous(span)
              className="glamor-1"
            >
              <span
                className="glamor-0"
              >
                example
              </span>
            </glamorous(span)>
          </LabelText>
        </glamorous(LabelText)>
        <glamorous(HintText)>
          <HintText
            className="glamor-1"
          >
            <glamorous(span)
              className="glamor-1"
            >
              <span
                className="glamor-3"
              >
                example
              </span>
            </glamorous(span)>
          </HintText>
        </glamorous(HintText)>
        <glamorous(ErrorText)>
          <ErrorText
            className="glamor-1"
          >
            <glamorous(span)
              className="glamor-1"
            >
              <span
                className="glamor-6"
              >
                example
              </span>
            </glamorous(span)>
          </ErrorText>
        </glamorous(ErrorText)>
        example
      </div>
    </Styled(div)>
  </MultiChoice>
</glamorous(MultiChoice)>
`;
